--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,11 +14,11 @@ a,
   transition: 0.4s;
 }
 a.router-link-active{
-  background-color: hsla(160, 100%, 37%, 0.2);
+  color: rgb(255, 242, 57) !important;
 }
-
+/* 
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
   }
-}
+} */
