--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,7 +11,7 @@ a,
 .green {
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
+  /* transition: 0.4s; */
 }
 a.router-link-active{
   color: rgb(255, 242, 57) !important;
