--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -61,6 +61,7 @@
 
 body {
   min-height: 100vh;
+  background-color: #000 !important;
   color: var(--color-text);
   background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
